<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_mtm_v7</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for the Simple MTM robot</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <build_depend>launch_ros</build_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>Universal_Robots_ROS2_Description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
